[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://intro/script/Spell_Book_v2.gd" type="Script" id=4]
[ext_resource path="res://intro/picture/close.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="methods" type="Node"]
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="methods" type="RichTextLabel" parent="Panel"]
margin_left = 90.0
margin_top = 8.0
margin_right = 249.0
margin_bottom = 25.0
custom_fonts/normal_font = SubResource( 2 )
text = "Flowchart Symbol"

[node name="Control" type="Control" parent="Panel"]
margin_left = 7.0
margin_top = 30.0
margin_right = 107.0
margin_bottom = 175.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 94.0
margin_right = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Control/ScrollContainer"]
margin_right = 108.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="terminal" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 15.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Terminal"

[node name="preperation" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 96.0
margin_bottom = 34.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Preperation"

[node name="process" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 96.0
margin_bottom = 53.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Process"

[node name="InputOutput" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 96.0
margin_bottom = 72.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Input/Output"

[node name="decision" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 96.0
margin_bottom = 91.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "decision"

[node name="offpage" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 96.0
margin_bottom = 110.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "offpage"

[node name="flowlines" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 96.0
margin_bottom = 129.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "flowlines"

[node name="function" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 96.0
margin_bottom = 148.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "function"

[node name="Comment" type="Button" parent="Panel/Control/ScrollContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 96.0
margin_bottom = 167.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Comment"

[node name="close" type="TextureButton" parent="Panel"]
margin_left = 297.0
margin_top = 6.0
margin_right = 310.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )

[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/terminal" to="." method="_on_terminal_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/preperation" to="." method="_on_preperation_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/process" to="." method="_on_process_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/InputOutput" to="." method="_on_InputOutput_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/decision" to="." method="_on_decision_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/offpage" to="." method="_on_offpage_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/flowlines" to="." method="_on_flowlines_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/function" to="." method="_on_function_pressed"]
[connection signal="pressed" from="Panel/Control/ScrollContainer/VBoxContainer/Comment" to="." method="_on_Comment_pressed"]
[connection signal="pressed" from="Panel/close" to="." method="_on_close_pressed"]
